--- a/CollegeFootballApp.Console/CollegeFootballApp.Console.csproj
+++ b/CollegeFootballApp.Console/CollegeFootballApp.Console.csproj
@@ -10,11 +10,19 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CollegeFootballApp.Application\CollegeFootballApp.Application.csproj" />
     <ProjectReference Include="..\CollegeFootballApp.Infrastructure\CollegeFootballApp.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
