--- a/CollegeFootballApp.Infrastructure/CollegeFootballApp.Infrastructure.csproj
+++ b/CollegeFootballApp.Infrastructure/CollegeFootballApp.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="EFCore.BulkExtensions" Version="7.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
