Data base and entity work

--- a/CollegeFootballApp.Infrastructure/CollegeFootballApp.Infrastructure.csproj
+++ b/CollegeFootballApp.Infrastructure/CollegeFootballApp.Infrastructure.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\CollegeFootballApp.Application\CollegeFootballApp.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
