--- a/CollegeFootballApp.Infrastructure/CollegeFootballApp.Infrastructure.csproj
+++ b/CollegeFootballApp.Infrastructure/CollegeFootballApp.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CFBSharp" Version="4.5.1" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="EFCore.BulkExtensions" Version="7.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
