--- a/CollegeFootballApp.Application/CollegeFootballApp.Application.csproj
+++ b/CollegeFootballApp.Application/CollegeFootballApp.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CFBSharp" Version="4.5.1" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
