--- a/CollegeFootballApp.Console/CollegeFootballApp.Console.csproj
+++ b/CollegeFootballApp.Console/CollegeFootballApp.Console.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
